--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@ l<!DOCTYPE html>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Resume website in running in S3 and serverless lambda functions">
+    <meta name="description" content="Resume website running in S3 and serverless lambda functions">
     <meta name="author" content="Jesse Cafarelli">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
